HEAD
	+ Bugfix: Only ASCII alphanumeric characters are allowed in common
	  name to workaround the yet not fixed issue with UTF-8 and OpenSSL
	+ Give support for subject alternative names: the available types
	  are DNS, IP address and email address
	+ Add revokation reason listing certificates
	+ Fix enconding for CA HTML templates
	+ Cancel button works again when revoking and renewing a certificate
	+ Bugfix: DIRMODE changed to 0750 and migration script to fix existing
	  deployments
1.3.14
	+ Add custom module status section
1.3.13
	+ Bugfix: Service certificates are issued again if they were
	  revoked or they expired
	+ Service certificates are issued using CA expiration date
	+ Adding some help text to Service certificates model
1.1.30
	+ Do not show CA in module status
	+ Do not show a restart button for CA
1.1.20
	+ Allow same expiration days for CA and new issued certificates
	  setting to latter ones the same expiration date that CA one has
1.1.10
	+ Generate CRL at CA startup and correct CRL names
1.1.0
	+ Allow * character in common names
	+ Updating in certificate authority DB is now working to show
	expired certificates in the list and call observer when this
	event happens
	+ Country code, state and locality fields for CA certificate are
	now displayed and fill optionally by user
0.12.101
	+ Set SSLv3 extensions correctly to user certificates
0.12.100
	+ Bugfix: Expire days cannot be zero anymore
0.12.99
	+ New release
0.12
	+ New release
0.11.102
	+ Bugfix: Downloading files, tar is outputting nothing to
	stdout
0.11.101
	+ New release
0.11.100
	+ New release
0.11.99
	+ Check "days" are positive numbers
0.11
	+ New release
0.10.99
	+ New release
0.9.100
	+ New release
0.9.99
	+ Set a CA passphrase optionally
	+ Fixed bug when forcing revoke CA certificate
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ Fixed a bug related to renew or revoke currently used
	certificates by other modules
	+ Added Cancel buttons where they are necessary
	
0.9