@@ -2,7 +2,7 @@
 
 Migrationsdir = @DATADIR@/ebox-ca/migration
 
-nobase_Migrations_SCRIPTS = 0001_add_password_aware.pl 0002_fix_permissions.pl
+nobase_Migrations_SCRIPTS = 0001_add_password_aware.pl 0002_fix_permissions.pl 0003_add_p12_dir.pl
 
 EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
 
